逻辑链优化