@@ -197,7 +197,7 @@ public class BadgeReaderSimulatorImpl implements BadgeReaderSimulator {
     }
     
     private void scheduleAutoLock(String resourceId) {
-        Thread.ofVirtual().start(() -> {
+        new Thread(() -> {
             try {
                 // 模拟门保持解锁状态5秒后自动锁定
                 Thread.sleep(5000);
@@ -205,7 +205,7 @@ public class BadgeReaderSimulatorImpl implements BadgeReaderSimulator {
             } catch (InterruptedException e) {
                 Thread.currentThread().interrupt();
             }
-        });
+        }).start();
     }
     
     /**
